feat(security, infra): Implementa Autenticação HMAC e Otimizações de Arquitetura
Upgrade de Segurança e Arquitetura do Chatbot. Principais Mudanças:

1. Adiciona validação de Webhook com HMAC (SHA512).

2. Implementa controle de duplicidade de mensagens (ID).

3. Otimiza  para WAHA (Dashboard, API Key).

4. Adiciona dependências de serviço completas no .

5. Refatora a lógica de resposta para ser mais inteligente (condicional).

6. Melhoria significativa no Logging e Monitoramento ().

7. Otimiza Dockerfile com imagem .

8. Adiciona  no .env e docker-compose.

9. Otimização da View do chatbot_api.

10. Remove  e atualiza .

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ WAHA_DASHBOARD_USERNAME=admin
 WAHA_DASHBOARD_PASSWORD=your_password                   
 WHATSAPP_SWAGGER_USERNAME=admin
 WHATSAPP_SWAGGER_PASSWORD=your_swagger    
+
+WEBHOOK_HMAC_SECRET=seu_hmac_secret
