--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
+annotated-types==0.7.0
+anyio==4.11.0
 asgiref==3.10.0
 certifi==2025.10.5
 channels==4.3.1
 channels_redis==4.3.0
 charset-normalizer==3.4.4
 click==8.3.0
+distro==1.9.0
 Django==5.2.7
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 msgpack==1.1.2
 psycopg==3.2.12
 psycopg-binary==3.2.12
+pydantic==2.12.3
+pydantic_core==2.41.4
 redis==7.0.1
 requests==2.32.5
+sniffio==1.3.1
 sqlparse==0.5.3
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.38.0
-celery==5.3.6
